6/vs-ds.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.trycloud.co.in"   # Domain name of the external website
    - "trycloud.co.in"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-experimental
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "experimental.trycloud.co.in" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:   #THEN
      - destination:
          host: fleetman-webapp
          subset: experimental    
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-original
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "original.trycloud.co.in" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:   #THEN
      - destination:
          host: fleetman-webapp
          subset: original       
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
